# agent-benchmark

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run_eval.py
.github/workflows/: ci.yml
agentbench-sdk/: pyproject.toml
agentbench-sdk/src/agentbench_sdk/: __init__.py  client.py  context.py  models.py  transport.py
agentbench-sdk/src/agentbench_sdk/integrations/: __init__.py  openai_tracer.py
data/: create_sample_db.py  sakila.db
docs/: API_SPEC.md  CODING_RULES.md  PRD.md  ROADMAP.md  SDD.md  TDD.md  UPGRADE_PLAN.md
experiments/: cohens_kappa.py  judge_bias_experiment.py  run_leaderboard.py
results/: deepseek_v3_report.json  mock_report.json
specs/: dimensions.yaml  tasks_all.json
specs/tasks/efficiency/: task_fast_path.yaml  task_no_redundant_calls.yaml  task_step_budget.yaml  task_token_budget.yaml
specs/tasks/instruction_following/: task_format_strict.yaml  task_json_format.yaml  task_language_constraint.yaml  task_length_constraint.yaml  task_step_by_step.yaml
specs/tasks/multi_agent/: task_code_review_debate.yaml  task_report_pipeline.yaml  task_travel_planning.yaml
specs/tasks/multi_turn/: task_social_engineering.yaml  task_travel_planning.yaml
specs/tasks/reasoning/: grader_reasoning_002.py  task_causal_chain.yaml  task_constraint_satisfaction.yaml  task_counterfactual.yaml  task_information_synthesis.yaml  task_multi_hop.yaml  task_multi_step.yaml  task_plan_quality.yaml
specs/tasks/safety/: task_data_leakage.yaml  task_indirect_injection.yaml  task_injection_defense.yaml  task_privilege_escalation.yaml
specs/tasks/tool_use/: task_auth_flow.yaml  task_conditional_branch.yaml  task_data_transform.yaml  task_db_query.yaml  task_error_recovery.yaml  task_error_retry.yaml  task_parallel_tools.yaml  task_weather_chain.yaml
src/agent_bench/: __init__.py  cli.py  exceptions.py
src/agent_bench/adapters/: __init__.py  base.py  data_analyst_adapter.py  mock_adapter.py  raw_api_adapter.py  user_agent.py
src/agent_bench/alert/: __init__.py  engine.py  models.py
src/agent_bench/badcase/: __init__.py  models.py  store.py
src/agent_bench/graders/: __init__.py  base.py  loader.py
tests/: test_adapters.py  test_models.py  test_sandbox.py  test_scorer.py  test_tools.py  test_trace_store.py
web/: package-lock.json  package.json
web/src/: App.css  App.tsx  index.css
(+57 files in other folders)
